<resources>
    <string name="app_name">CountryWeather</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="image">Image</string>
    <string name="name">Name</string>
    <string name="capital">Capital</string>
    <string name="region">Region</string>
    <string name="population">Population</string>
    <string name="date">Date</string>
    <string name="temp">Temp</string>
    <string name="pressure">Pressure</string>
    <string name="loading">Loading</string>
    <string name="humidity">Humidity</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="refresh">Refresh</string>
</resources>
